# computer-graphics

dima/: heart.txt  main.py  poly.txt  pyproject.toml  triangle.txt
task-five/: c.txt  fence.txt  heart.txt  m.txt  main.py  pyproject.toml  raster.py  spiral.txt  transform.py  utils.py
task-four/: cirus_beck.py  cohen_sutherland.py  figures.py  main.py  midpoint.py  pyproject.toml  utils.py
task-one/: CMakeLists.txt  main.cpp
task-seven/: main.py  triangulation.py
task-six/: andrew.py  main.py  points.txt  pyproject.toml  utils.py
task-three/: data.py  line.txt  main.py  pyproject.toml  rasterize.py  transform.py
task-two/: animation.py  main.py  pyproject.toml  utils.py  window.py
