[tool.poetry]
name = "task-five"
version = "0.1.0"
description = ""
authors = ["ScorpKir <petryashev.k@gmail.com>"]
readme = "README.md"
packages = [{include = "task_five"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
celluloid = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
