[tool.poetry]
name = "task-four"
version = "0.1.0"
description = ""
authors = ["ScorpKir <petryashev.k@gmail.com>"]
readme = "README.md"
packages = [{include = "task_four"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
