[tool.poetry]
name = "task-six"
version = "0.1.0"
description = ""
authors = ["ScorpKir <petryashev.k@gmail.com>"]
readme = "README.md"
packages = [{include = "task_six"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
celluloid = "^0.2.0"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
