[tool.poetry]
name = "bresenham"
version = "0.1.0"
description = ""
authors = ["ScorpKir <petryashev.k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
numpy = "^1.24.2"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
