[tool.poetry]
name = "task-two"
version = "0.1.0"
description = "second task for computer graphics laboratory work"
authors = ["ScorpKir <petryashev.k@gmail.com>"]
readme = "README.md"
packages = [{include = "task_two"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.0"
turtle = "^0.0.2"
pygame = "^2.1.3"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
